fix group li numbers spacing - was broken for big numbers

--- a/app/assets/stylesheets/components/_group.scss
+++ b/app/assets/stylesheets/components/_group.scss
@@ -37,7 +37,7 @@
       margin-bottom: 0;
     }
     .group-list-item-numbers {
-      min-width: 50px;
+      min-width: 64px;
       margin-right: 1rem;
     }
   }
